:STYLE: => correction input dark mode

--- a/src/styles/sass/pages/_contact.scss
+++ b/src/styles/sass/pages/_contact.scss
@@ -96,7 +96,7 @@
   textarea {
     border: none;
     border-bottom: 2px solid rgba($bluesky, 0.5);
-
+    color: white;
     width: 100%;
     max-width: 500px;
     height: 31px;
